force-app/main/default/objects/vf_OnboardingChecklist__c/vf_OnboardingChecklist__c.object-meta.xml
<CustomObject>
    <label>Onboarding Checklist</label>
    <pluralLabel>Onboarding Checklists</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Checklist Number</label>
        <displayFormat>ONC-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Object to track volunteer onboarding checklists</description>
</CustomObject>