force-app/main/default/objects/vf_OnboardingChecklist__c/fields/Completed_Items__c.field-meta.xml
<CustomField>
    <fullName>Completed_Items__c</fullName>
    <label>Completed Items</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Number of completed items in the checklist</description>
    <inlineHelpText>The number of completed items in this onboarding checklist</inlineHelpText>
</CustomField>