force-app/main/default/objects/vf_OnboardingChecklist__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <label>Created Date</label>
    <type>Date</type>
    <description>Date the checklist was created</description>
    <inlineHelpText>The date when this onboarding checklist was created</inlineHelpText>
</CustomField>