force-app/main/default/objects/vf_OnboardingChecklist__c/fields/Items__c.field-meta.xml
<CustomField>
    <fullName>Items__c</fullName>
    <label>Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>JSON array of checklist items with completion status</description>
    <inlineHelpText>List of items in this onboarding checklist with their completion status. Stored in JSON format.</inlineHelpText>
</CustomField>