force-app/main/default/objects/vf_OnboardingChecklist__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>vf_Project__c</referenceTo>
    <relationshipLabel>Onboarding Checklists</relationshipLabel>
    <relationshipName>Onboarding_Checklists</relationshipName>
    <type>Lookup</type>
    <description>Project the checklist is related to</description>
    <inlineHelpText>The project this onboarding checklist is for</inlineHelpText>
</CustomField>