force-app/main/default/objects/vf_OnboardingChecklist__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <referenceTo>vf_Role__c</referenceTo>
    <relationshipLabel>Onboarding Checklists</relationshipLabel>
    <relationshipName>Onboarding_Checklists</relationshipName>
    <type>Lookup</type>
    <description>Role the checklist is for</description>
    <inlineHelpText>The role this onboarding checklist is for</inlineHelpText>
</CustomField>