force-app/main/default/objects/vf_OnboardingChecklist__c/fields/Total_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Items__c</fullName>
    <label>Total Items</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Total number of items in the checklist</description>
    <inlineHelpText>The total number of items in this onboarding checklist</inlineHelpText>
</CustomField>