force-app/main/default/objects/vf_OnboardingChecklist__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <label>Volunteer</label>
    <referenceTo>vf_Volunteer__c</referenceTo>
    <relationshipLabel>Onboarding Checklists</relationshipLabel>
    <relationshipName>Onboarding_Checklists</relationshipName>
    <type>Lookup</type>
    <description>Volunteer the checklist is for</description>
    <inlineHelpText>The volunteer this onboarding checklist is for</inlineHelpText>
</CustomField>